# CityScape

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.hpp  main.cpp  objloader.cpp  objloader.hpp  renderable.cpp  renderable.hpp  renderer.cpp  renderer.hpp  root.cpp  root.hpp  shader.cpp  texture.cpp  texture.hpp
shader/: DebugFragmentShader.fragmentshader  DebugVertexShader.vertexshader  MaterialFragment.shader  MaterialVertex.shader  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
source/: boundingBox.cpp  boundingBox.hpp  buildingGenerator.cpp  buildingGenerator.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  main.cpp  objloader.cpp  objloader.hpp  renderable.cpp  renderable.hpp  renderableMaterial.cpp  renderableMaterial.hpp  renderableTexture.cpp  renderableTexture.hpp  renderer.cpp  renderer.hpp  root.cpp  root.hpp  shader.cpp  shader.hpp  skybox.cpp  skybox.hpp  skyboxGenerator.cpp  skyboxGenerator.hpp  streetGenerator.cpp  streetGenerator.hpp  texture.cpp  texture.hpp
